@@ -1,8 +1,53 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-pwrap <- function(phase) {
-    .Call(`_zernike_pwrap`, phase)
+#' Compiled code via Rcpp for Itoh's method of phase unwrapping
+#' 
+#' Called by [brcutpuw()] for fast phase unwrapping
+#' 
+#' @param nr number of rows in phase matrix
+#' @param nc number of columns in phase matrix
+#' @param phase phase matrix converted to vector
+#' @param mask matrix of mask values converted to vector
+#' @param dx wrapped phase differences in x direction
+#' @param dy wrapped phase differences in y direction
+#' @return a vector with the unwrapped phase
+#' @details
+#'   This is called by [brcutpuw()] through [idiffpuw()] 
+#'   but is also user callable.
+#'   Wrapped phase values and differences are divided by \code{2*pi} before input
+#'   making the input values in the range [-1/2, 1/2).
+#'   In [brcutpuw()] the mask indicates areas outside the interferogram area
+#'   and lines of branch cuts
+#' @seealso [brcutpuw()], [idiffpuw()]
+#' @author M.L. Peck (mlpeck54 -at- gmail.com)  
+NULL
+
+#' Compiled code via Rcpp for Itoh's method of phase unwrapping
+#' 
+#' Called by [idiffpuw()] for fast phase unwrapping
+#' 
+#' @param nr number of rows in phase matrix
+#' @param nc number of columns in phase matrix
+#' @param phase phase matrix converted to vector
+#' @return a vector with the unwrapped phase
+#' @details
+#'   This is called by [idiffpuw()] 
+#'   but is also user callable.
+#'   Wrapped phase values are divided by \code{2*pi} before input
+#'   making the input values in the range [-1/2, 1/2).
+#'   In [brcutpuw()] the mask indicates areas outside the interferogram area
+#'   and lines of branch cuts
+#' @seealso [brcutpuw()], [idiffpuw()]
+#' @author M.L. Peck (mlpeck54 -at- gmail.com)  
+NULL
+
+id_dxy_uw <- function(nr, nc, phase, mask, dx, dy, uw) {
+    .Call(`_zernike_id_dxy_uw`, nr, nc, phase, mask, dx, dy, uw)
+}
+
+id_uw <- function(nr, nc, phase) {
+    .Call(`_zernike_id_uw`, nr, nc, phase)
 }
 
 lspsiC <- function(images, phases, wt) {
@@ -15,6 +60,28 @@ aiapsiC <- function(images, phases_init, ptol, maxiter, trace) {
 
 gpcapsiC <- function(images, ptol, maxiter, trace) {
     .Call(`_zernike_gpcapsiC`, images, ptol, maxiter, trace)
+}
+
+#' Compiled code via Rcpp for quality guided phase unwrapping
+#' 
+#' Called by [qpuw()] for fast quality guided phase unwrapping
+#' 
+#' @param nr number of rows in phase matrix
+#' @param nc number of columns in phase matrix
+#' @param phase phase matrix converted to vector
+#' @param qual quality matrix converted to vector
+#' @return a vector with the unwrapped phase
+#' @details
+#'   This is called by [qpuw()] but is also user callable.
+#'   Wrapped phase values are divided by \code{2*pi} before input
+#'   making the input values in the range [-1/2, 1/2).
+#' @seealso [qpuw()], [idiffpuw()]
+#' @author M.L. Peck (mlpeck54 -at- gmail.com)  
+#'   with valuable programming advice from Steve Koehler
+NULL
+
+q_uw <- function(nr, nc, phase, qual) {
+    .Call(`_zernike_q_uw`, nr, nc, phase, qual)
 }
 
 readraw <- function(fname, channels) {
@@ -31,6 +98,10 @@ res_frame <- function(pars, adata) {
 
 jac_frame <- function(pars, adata) {
     .Call(`_zernike_jac_frame`, pars, adata)
+}
+
+pwrap <- function(phase) {
+    .Call(`_zernike_pwrap`, phase)
 }
 
 tiltpsiC <- function(images, phases_init, coords, ptol, maxiter, trace) {
